--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -30,5 +30,7 @@
         android:id="@+id/btnSignIn"
         android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/btnSignUp"
-        android:layout_alignStart="@+id/btnSignUp" />
+        android:layout_alignStart="@+id/btnSignUp"
+        android:layout_alignRight="@+id/btnSignUp"
+        android:layout_alignEnd="@+id/btnSignUp" />
 </RelativeLayout>
